# Soul-DID

./: .gitignore  LICENSE  Makefile  README.md  foundry.toml  pyproject.toml
client/: admin.py  config.py  issuer.py  user.py  utils.py
script/: Deploy.s.sol  Interact.s.sol
src/: IssuerRegistry.sol  SoulboundDID.sol  VerifierRegistry.sol
src/interfaces/: IERC5192.sol  IVCVerifier.sol
src/verifiers/: AgeOver18Verifier.sol  BaseVCVerifier.sol
test/: DIDSystem.t.sol
web/: main.py
web/static/: style.css
web/templates/: index.html
